--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import "navigation.scss";
 @import "about.scss";
 @import "reviews.scss";
-@import "contact.scss";
+// @import "contact.scss";
 @import "service.scss";
 @import "button.scss";
 
