--- a/css/style.css
+++ b/css/style.css
@@ -178,16 +178,16 @@ select {
   background-size: cover; }
 
 .services__content {
-  display: flex; }
+  display: flex;
+  flex-wrap: wrap; }
 
 .services__wrapper {
   display: flex;
   flex-direction: column;
-  font-size: 24px;
+  flex-grow: 1;
   color: white;
   height: 300px;
   padding: 50px;
-  width: 50%;
   transition: 0.9s; }
 
 .services__title {
@@ -195,7 +195,7 @@ select {
   margin-bottom: 1rem; }
 
 .services__wrapper:hover {
-  width: 60%;
+  flex-grow: 3;
   transition: 0.9s; }
   .services__wrapper:hover .services__text {
     opacity: 1;
@@ -203,7 +203,7 @@ select {
 
 .services__text {
   width: 30rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin-bottom: 2rem;
   transition: 0.9s; }
 
