--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -11,9 +11,11 @@
   margin-bottom: 40px;
 }
 .reviews__wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr 1fr;
+  // grid-gap: 40px;
+  display: flex;
+  flex-direction: row;
 }
 
 .reviews__content {
