--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,8 @@ select {
   margin-bottom: 40px; }
 
 .reviews__wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px; }
+  display: flex;
+  flex-direction: row; }
 
 .reviews__content {
   padding: 20px;
