--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -11,20 +11,23 @@
   margin-bottom: 40px;
 }
 .reviews__wrapper {
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  // grid-gap: 40px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+  
+}
+.slick-list {
+  order: -1;
 }
 
 .reviews__content {
   padding: 20px;
-
   height: 200px;
   background-color: $second_color;
 
   justify-self: center;
+  
 }
 .reviews__name {
   margin-bottom: 20px;
@@ -32,4 +35,207 @@
 }
 .reviews__text {
   font-size: 1.5rem;
+}
+
+
+
+
+
+/* Slider */
+/* Slider */
+.slick-slider
+{
+    position: relative;
+
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    
+    display: block;
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+    
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+
+    margin: 5px;
+    
+    height: 100%;
+    min-height: 1px;
+    
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+
+    height: auto;
+
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+
+/* Arrows */
+
+
+.slick-prev,
+.slick-next{
+  display: block;
+  font-size: 0;
+  line-height: 0;
+  cursor: pointer;
+  border: none;
+}
+
+
+.slick-arrow {
+  position: relative;
+
+  width: 3rem;
+  height: 3rem;
+  margin-top: 40px;
+    
+  background-color: transparent;
+  border-radius: 1.625rem;
+
+}
+.slick-next {
+    margin-left: 20px;
+}
+.slick-prev {
+    margin-right: 20px;
+}
+//Стрелочки внутри 
+.slick-prev::after, .slick-prev::before {
+  right: 45%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+.slick-prev::after {
+  border-right-color: white;
+	border-width: 8px;
+	margin-top: -8px;
+}
+
+.slick-prev::before {
+  border-color: rgba(194, 225, 245, 0);
+  border-right-color: #ffa188;
+	border-width: 16px;
+	margin-top: -16px;  
+}
+.slick-next::after, .slick-next::before {  
+  left: 40%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+    .slick-next::after {  
+  border-left-color: white;  
+	border-width: 8px;
+  margin-top: -8px;
+}
+.slick-next::before {
+  border-color: rgba(194, 225, 245, 0);
+  border-left-color: #ffa188;
+  margin-top: -16px;   
+	border-width: 16px;
 }
