--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@ select {
 
 .header-bar {
   height: 600px;
+  padding-left: 8rem;
+  padding-right: 8rem;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/physiotherapy-567021_1920.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -78,7 +80,6 @@ select {
   color: white; }
 
 .nav-bar {
-  width: 960px;
   margin: 0 auto; }
 
 .nav__list {
@@ -92,7 +93,6 @@ select {
   color: white; }
 
 .info {
-  width: 960px;
   margin: 0 auto;
   margin-top: 120px; }
   .info__wrapper {
@@ -103,16 +103,21 @@ select {
     margin-top: 40px; }
 
 .about-us {
-  width: 960px;
+  padding: 8rem;
   margin: 0 auto;
-  margin-top: 80px;
-  height: 400px;
+  height: 500px;
   display: flex;
-  justify-content: space-around; }
+  flex-wrap: wrap;
+  justify-content: center; }
 
 .about__wrapper {
-  width: 420px;
-  align-self: center; }
+  align-self: center;
+  flex-basis: 40%; }
+
+.about__me__img__wrapper {
+  display: flex;
+  justify-content: space-around;
+  flex-basis: 40%; }
 
 .about__me-1 {
   width: 200px;
@@ -310,20 +315,22 @@ select {
   border-width: 16px; }
 
 .contact {
-  background-color: #f5f3f3; }
+  background-color: #f5f3f3;
+  margin: 0 auto;
+  padding: 8rem; }
 
-.contact__wrapper {
-  width: 960px;
-  margin: 0 auto; }
+.contact__text {
+  margin-bottom: 2rem; }
 
 .contact__sub-wrapper {
-  display: flex; }
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
 
 .contact__form {
   display: flex;
   flex-wrap: wrap;
-  flex-basis: 70%;
-  margin-top: 2rem; }
+  flex-basis: 65%; }
 
 .contact__form__info {
   display: flex;
@@ -336,7 +343,9 @@ select {
 .contact__form__input {
   width: 100%;
   height: 40px;
-  border: 1px solid #666666; }
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: .75rem 2.5rem .75rem 1rem; }
 
 .contact__form__select {
   margin-top: 2rem;
@@ -363,7 +372,6 @@ select {
   /* убираем дефолнтные стрелочки */
   font-family: inherit;
   /* наследует от родителя */
-  font-size: 1rem;
   color: #444; }
 
 .contact__form__select:after {
@@ -379,14 +387,34 @@ select {
   z-index: 1;
   margin-top: -3px; }
 
-.contact__info {
-  flex-basis: 30%; }
-
 .contact__form__text {
   width: 100%;
-  height: 300px;
+  height: 200px;
   margin-top: 2rem;
-  border: 1px solid #666666; }
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: .75rem 2.5rem .75rem 1rem;
+  resize: none;
+  color: rgba(1, 1, 1, 0.3); }
+
+.contact__form__button {
+  margin-top: 2rem;
+  flex-basis: 50%;
+  height: 3rem;
+  background-color: #ffa188;
+  font-size: 1.6rem;
+  color: white;
+  border-radius: 1.625rem;
+  border: none; }
+
+.contact__info {
+  flex-basis: 30%;
+  height: 350px;
+  background-color: white;
+  padding: 40px; }
+
+.contact__info__text {
+  margin-top: 2rem; }
 
 .services {
   margin: 0 auto;
@@ -574,3 +602,30 @@ select {
       transform: translate(1rem, 0); }
   .button:hover .button-text {
     color: #fff; }
+
+.footer-bar {
+  height: 400px;
+  padding: 8rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wellness-589774_1920.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: white; }
+
+.footer__title {
+  text-align: center; }
+
+.footer__nav-bar {
+  margin: 0 auto; }
+
+.footer__nav__list {
+  display: flex;
+  justify-content: center;
+  height: 80px;
+  align-items: center;
+  flex-wrap: wrap; }
+
+.footer__list-item {
+  padding: 1rem;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5); }
