--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,11 @@
   overflow: hidden; }
 
 html {
-  font-size: 1rem; }
+  font-size: 100%; }
 
 body {
   font-family: 'Roboto Condensed', sans-serif;
-  letter-spacing: 1px;
-  font-size: 18px; }
+  letter-spacing: 1px; }
 
 /* Box sizing rules */
 *,
@@ -95,17 +94,14 @@ select {
 .info {
   margin: 0 auto;
   margin-top: 120px; }
-  .info__wrapper {
-    width: 640px; }
   .info__title {
     font-size: 28px; }
   .info__text {
     margin-top: 40px; }
 
 .about-us {
-  padding: 8rem;
+  padding: 40px;
   margin: 0 auto;
-  height: 500px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center; }
@@ -117,7 +113,8 @@ select {
 .about__me__img__wrapper {
   display: flex;
   justify-content: space-around;
-  flex-basis: 40%; }
+  flex-basis: 40%;
+  height: 350px; }
 
 .about__me-1 {
   width: 200px;
@@ -134,6 +131,15 @@ select {
   background-size: cover;
   background-position: 50% 90%;
   align-self: flex-end; }
+
+@media (max-width: 960px) {
+  .about-us {
+    padding-bottom: 40px; }
+  .about__wrapper {
+    flex-basis: 100%; }
+  .about__me__img__wrapper {
+    flex-basis: 100%;
+    height: 100%; } }
 
 .reviews {
   margin-top: 80px;
@@ -315,14 +321,17 @@ select {
   border-width: 16px; }
 
 .contact {
-  background-color: #f5f3f3;
   margin: 0 auto;
-  padding: 8rem; }
+  padding: 80px;
+  background-color: #f5f3f3; }
+
+.contact__title {
+  margin-bottom: 10px; }
 
 .contact__text {
-  margin-bottom: 2rem; }
+  margin-bottom: 20px; }
 
-.contact__sub-wrapper {
+.contact__wrapper {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap; }
@@ -338,7 +347,8 @@ select {
   justify-content: space-between; }
 
 .contact__form__input-wrapper {
-  width: 49%; }
+  width: 49%;
+  margin-bottom: 20px; }
 
 .contact__form__input {
   width: 100%;
@@ -348,7 +358,6 @@ select {
   padding: .75rem 2.5rem .75rem 1rem; }
 
 .contact__form__select {
-  margin-top: 2rem;
   position: relative;
   flex-basis: 100%; }
 
@@ -390,7 +399,7 @@ select {
 .contact__form__text {
   width: 100%;
   height: 200px;
-  margin-top: 2rem;
+  margin-top: 20px;
   border: 1px solid #ccc;
   border-radius: 3px;
   padding: .75rem 2.5rem .75rem 1rem;
@@ -398,28 +407,55 @@ select {
   color: rgba(1, 1, 1, 0.3); }
 
 .contact__form__button {
-  margin-top: 2rem;
+  margin-top: 80px;
   flex-basis: 50%;
-  height: 3rem;
+  height: 60px;
   background-color: #ffa188;
   font-size: 1.6rem;
   color: white;
-  border-radius: 1.625rem;
+  border-radius: 30px;
   border: none; }
 
 .contact__info {
   flex-basis: 30%;
-  height: 350px;
+  height: 330px;
   background-color: white;
   padding: 40px; }
 
 .contact__info__text {
-  margin-top: 2rem; }
+  margin-top: 20px; }
+
+@media (max-width: 960px) {
+  .contact__wrapper {
+    flex-direction: column; }
+  .contact__form__button {
+    margin-top: 40px;
+    margin-bottom: 40px; } }
+
+@media (max-width: 640px) {
+  .contact__form__button {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    flex-basis: 100%;
+    height: 60px;
+    background-color: #ffa188;
+    font-size: 1.6rem;
+    color: white;
+    border-radius: 30px;
+    border: none; }
+  .contact__form__info {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    justify-content: space-between; }
+  .contact__form__input-wrapper {
+    width: 100%;
+    margin-bottom: 20px; } }
 
 .services {
+  padding-bottom: 40px;
   margin: 0 auto;
-  margin-top: 120px;
-  grid-template-columns: 1fr 1fr; }
+  background-color: #fcede8; }
 
 .item1 {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_1.jpg");
@@ -452,24 +488,11 @@ select {
 
 .services__title {
   font-size: 2rem;
-  margin-bottom: 1rem; }
-
-.services__wrapper:hover {
-  flex-grow: 3;
-  transition: 0.9s; }
-  .services__wrapper:hover .services__text {
-    opacity: 1;
-    transition: 0.9s; }
+  margin-bottom: 20px; }
 
 .services__text {
-  width: 30rem;
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
-  transition: 0.9s; }
-
-.services {
-  background-color: #fcede8;
-  padding-bottom: 2rem; }
+  margin-bottom: 20px;
+  font-size: 1.2rem; }
 
 .button {
   position: relative;
@@ -534,6 +557,31 @@ select {
   .button:hover .button-text {
     color: white; }
 
+@media (max-width: 960px) {
+  .services__content {
+    display: flex;
+    flex-direction: column; } }
+
+@media (min-width: 960px) {
+  .services__wrapper:hover {
+    flex-grow: 3;
+    transition: 0.9s; }
+    .services__wrapper:hover .services__text {
+      opacity: 1;
+      transition: 0.9s; }
+  .services__text {
+    width: 30rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    transition: 0.9s; } }
+
+@media (max-width: 640px) {
+  .services__text {
+    width: 100%;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    transition: 0.9s; } }
+
 .button__wrapper--all {
   display: flex;
   justify-content: center; }
@@ -592,7 +640,7 @@ select {
       justify-content: center;
       align-items: center;
       color: #ffa188;
-      font-size: 2rem;
+      font-size: 1.6rem;
       font-weight: 700;
       text-transform: uppercase; }
   .button:hover .circle {
