--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -38,7 +38,7 @@
   margin: 0 auto;
   margin-top: 120px;
   &__wrapper {
-    width: 640px;
+    // width: 640px;
   }
   &__title {
     font-size: 28px;
