--- a/scss/about.scss
+++ b/scss/about.scss
@@ -36,13 +36,14 @@
   // width: 960px;
   // padding-left: 10rem;
   // padding-right: 10rem;
-  padding: 8rem;
+  padding: 40px;
   margin: 0 auto;
   // margin-top: 80px;
-height: 500px;
+// height: 500px;
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
+
 
 
 }
@@ -60,6 +61,8 @@ justify-content: center;
   display: flex;
   justify-content: space-around;
   flex-basis: 40%;
+  height: 350px;
+
   
 }
 .about__me-1 {
@@ -78,7 +81,18 @@ justify-content: center;
   background-position: 50% 90%;
   align-self: flex-end;
 }
-
+@media (max-width: 960px) {
+  .about-us {
+    padding-bottom: 40px;
+  }
+  .about__wrapper {
+    flex-basis: 100%;
+  }
+  .about__me__img__wrapper {
+    flex-basis: 100%;
+    height: 100%;
+  }
+}
 
 
 
