--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,21 +1,17 @@
 .contact {
-    background-color: #f5f3f3;
     margin: 0 auto;
-    // padding-top: 2rem;
-    // padding-bottom: 2rem;
-    padding: 8rem;
+    padding: 80px;
 
+    background-color: #f5f3f3;
 }
-.contact__wrapper {
-    // width: 960px;
-    // margin: 0 auto;
-    // padding-top: 2rem;
-    // padding-bottom: 2rem;
+
+.contact__title {
+    margin-bottom: 10px;
 }
 .contact__text {
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
 }
-.contact__sub-wrapper{
+.contact__wrapper{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -25,17 +21,18 @@
     display: flex;
     flex-wrap: wrap;
     flex-basis: 65%;
-
-    // margin-top: 2rem;    
+ 
 }
 .contact__form__info {
     display: flex;
     flex-basis: 100%;
     justify-content: space-between;
-    // border: 2px solid red;
+
 }
 .contact__form__input-wrapper {
     width: 49%;
+    margin-bottom: 20px;
+   
 }
 .contact__form__input{
     width: 100%;
@@ -46,10 +43,10 @@
     
 }
 .contact__form__select {
-    margin-top: 2rem;
+   
+    
     position: relative;
     flex-basis: 100%;
-    // font-size: 1rem;
 }
 .contact__form__select select {
    
@@ -83,8 +80,8 @@
 .contact__form__text {
     width: 100%;
     height: 200px;
-
-    margin-top: 2rem;
+    
+    margin-top: 20px;
 
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -94,34 +91,67 @@
     color: rgba(1, 1, 1, 0.3);
 }
 .contact__form__button {
-    margin-top: 2rem;
+    margin-top: 80px;
+    
     flex-basis: 50%;
-    height: 3rem;
+    height: 60px;
 
     background-color: $main_color;
     
     font-size: 1.6rem;
     color: white;
 
-    border-radius: 1.625rem;
+    border-radius: 30px;
     border: none;
 }
 
 .contact__info {
     flex-basis: 30%;
-    // border: 2px solid red;
-    // margin-top: 2rem;
-    height: 350px;
-    
+ 
+    height: 330px;
     background-color: white;
     
     padding: 40px;
 }
-// .contact__info__wrapper {
-  
-//     height: 100%;
-    
-// }
+
 .contact__info__text {
-    margin-top: 2rem;
+    margin-top: 20px;
+}
+
+@media (max-width: 960px) {
+    .contact__wrapper {
+        flex-direction: column;
+    }
+    .contact__form__button {
+        margin-top: 40px;
+        margin-bottom: 40px;
+       
+    }
+}
+@media (max-width: 640px) {
+    .contact__form__button {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        flex-basis: 100%;
+        height: 60px;
+    
+        background-color: $main_color;
+        
+        font-size: 1.6rem;
+        color: white;
+    
+        border-radius: 30px;
+        border: none;
+    }
+    .contact__form__info {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 100%;
+        justify-content: space-between;
+    
+    }
+    .contact__form__input-wrapper {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
