--- a/scss/scaffolding.scss
+++ b/scss/scaffolding.scss
@@ -19,12 +19,13 @@ $second_color: #fcede8;
 }
 
 html {
-  font-size: 1rem;
+  // font-size: 1rem;
+  font-size: 100%;
 }
 body {
   font-family: 'Roboto Condensed', sans-serif;
   letter-spacing: 1px;
-  font-size: 18px;
+  // font-size: 18px;
 }
 /* Box sizing rules */
 *,
