--- a/scss/service.scss
+++ b/scss/service.scss
@@ -1,10 +1,9 @@
 .services {
-  // display: grid;
-  // width: 960px;
+ 
+  padding-bottom: 40px;
   margin: 0 auto;
-  margin-top: 120px;
 
-  grid-template-columns: 1fr 1fr;
+  background-color: #fcede8;
 }
 
 
@@ -37,69 +36,6 @@
     background-size: cover;
 }
 
-
-// .test {
-//   display: flex;
-//   width: 960px;
-//   margin: 0 auto;
-// }
-// .services:hover > .test > .item {
-
-//    width: 100px;
-// }
-// .item {
-
-//   height: 300px;
-//     font-size: 24px;
-//     color: white;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// // width: 50%;
-//   flex-grow: 1;
-//   transition: 0.9s;
-
-//   flex-direction: column;
-// transition: .55s opacity, .55s;
-
-// }
-
-
-// .test__text{
-
-// font-size: 0.8em;
-
-// justify-content: flex-start;
-//   opacity: 0;
-// transition: .55s opacity, .55s;
-
-// width: 600px;
-//   }
-// .item:hover {
-//   flex-grow: 3;
-
-// transition: .55s opacity, .55s;
-
-//   .test__text {
-//     opacity: 1;
-//     // transition: .55s opacity, .55s visibility;
-//     transition: .55s opacity, .55s;
-//     // transition: 0.9s visibility;
-// // padding: 60px;
-// width: 600px;
-// visibility: visible;
-
-
-//   }
-//   }
-
-// .item:hover + div > .test__text{
-//     // opacity: 1;
-//     // width: 200px;
-//     // visibility: visible;
-// }
-
-
 .services__content {
   display: flex;
   flex-wrap: wrap;
@@ -109,74 +45,30 @@
 .services__wrapper {
   display: flex;
   flex-direction: column;
-  // 
   flex-grow: 1;
-  // justify-content: center;
-  // align-items: center;
-
-
-  // font-size: 24px;
+  
   color: white;
 
   height: 300px;
   padding: 50px;
-  // width: 50%;
-  
 
   transition: 0.9s;
-
-
-
-
 }
+
 
 .services__title {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
 }
-
-
-
-.services__wrapper:hover {
-
-// width: 60%;
-flex-grow: 3;
-transition: 0.9s;
-
-  .services__text {
-    opacity: 1;
-    transition: 0.9s;
-    // visibility: visible;
-  }
-  }
-  .services__text{
-
-width: 30rem;
-font-size: 1.2rem;
-margin-bottom: 2rem;
-
-  // opacity: 0;
-transition: 0.9s;
-
-// width: 600px;
-  }
-
-
+.services__text {
+  margin-bottom: 20px;
+  font-size: 1.2rem;
+}
   //button кнопка
-
-
-
-
 
 @mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65,0,.076,1)) {
   transition: $property $duration $ease;
 }
-
-.services {
-  background-color: #fcede8;
-  padding-bottom: 2rem;
-}
-
 .button {
   position: relative;
   display: inline-block;
@@ -265,6 +157,41 @@ transition: 0.9s;
   }
 }
 
+@media (max-width: 960px) {  
+  .services__content {
+    display: flex;
+    flex-direction: column;
+  }
+
+}
 
 
+@media (min-width: 960px) {
+  .services__wrapper:hover {
+    flex-grow: 3;
+    transition: 0.9s;
+    
+      .services__text {
+        opacity: 1;
+        transition: 0.9s;
+       }
+      }
+  .services__text{
+    width: 30rem;
+    margin-bottom: 2rem;
 
+    font-size: 1.2rem;
+        
+    transition: 0.9s;
+  }
+}
+@media (max-width: 640px){
+  .services__text{
+    width: 100%;
+    margin-bottom: 2rem;
+
+    font-size: 1.2rem;
+        
+    transition: 0.9s;
+  }
+}
