--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ select {
 
 .header-bar {
   height: 600px;
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 80px;
+  padding-right: 80px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/physiotherapy-567021_1920.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,6 +98,49 @@ select {
     font-size: 28px; }
   .info__text {
     margin-top: 40px; }
+
+@media (max-width: 960px) {
+  .header-bar {
+    height: 600px;
+    padding-left: 0;
+    padding-right: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/physiotherapy-567021_1920.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    color: white; }
+  .nav-bar {
+    position: relative;
+    margin: 0 auto;
+    padding-top: 40px;
+    width: 100%;
+    border: 2px solid red; }
+  .nav__list {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    flex-basis: 100%;
+    border: 2px solid red; }
+  .list-item {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    flex-basis: 100%;
+    text-decoration: none;
+    color: white;
+    border: 2px solid red;
+    background-color: #ffa188; } }
+
+.nav__button {
+  position: absolute;
+  border: 2px solid red;
+  background-color: red;
+  height: 30px;
+  width: 30px;
+  top: 0;
+  left: 100%; }
 
 .about-us {
   padding: 40px;
