--- a/css/style.css
+++ b/css/style.css
@@ -112,26 +112,30 @@ select {
   .nav-bar {
     position: relative;
     margin: 0 auto;
-    padding-top: 40px;
-    width: 100%;
-    border: 2px solid red; }
+    width: 100%; }
   .nav__list {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     width: 100%;
     height: 100%;
-    flex-basis: 100%;
-    border: 2px solid red; }
+    flex-basis: 100%; }
+    .nav__list li {
+      width: 100%; }
   .list-item {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 60px;
     flex-basis: 100%;
     text-decoration: none;
     color: white;
-    border: 2px solid red;
-    background-color: #ffa188; } }
+    font-size: 1.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #df8f79;
+    border-top: 1px solid #c07c69;
+    border-bottom: 1px solid #000001; } }
 
 .nav__button {
   position: absolute;
@@ -141,6 +145,9 @@ select {
   width: 30px;
   top: 0;
   left: 100%; }
+
+.svg__test {
+  fill: white; }
 
 .about-us {
   padding: 40px;
