--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -64,31 +64,41 @@
   .nav-bar {
     position: relative;
     margin: 0 auto;
-    padding-top: 40px;
+
     width: 100%;
-    border:2px solid red;
+    
   }
   .nav__list {
+    
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     width: 100%;
     height: 100%;
     flex-basis: 100%;
-    border:2px solid red;
+    
+    li {
+      width: 100%;
+      
+    }
   }
   .list-item {
     display: flex;
     align-items: center;
+    justify-content: center;
 
     height: 60px;
     flex-basis: 100%;
     
     text-decoration: none;
     color: white;
+    font-size: 1.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
     
-    border:2px solid red;
-    background-color: $main-color;
+    background-color: #df8f79;
+    border-top: 1px solid #c07c69;
+    border-bottom: 1px solid #000001;
   }
 }
 .nav__button {
@@ -99,4 +109,7 @@
   width: 30px;
   top: 0;
   left: 100%;
+}
+.svg__test {
+  fill: white;
 }
