--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,23 @@ textarea,
 select {
   font: inherit; }
 
+.menu-icon--open {
+  display: inline-block;
+  width: 40px;
+  height: 30px;
+  border-top: 3px solid blue;
+  border-bottom: 3px solid blue;
+  position: relative; }
+
+.menu-icon--open::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 40px;
+  height: 3px;
+  top: 45%;
+  background-color: blue; }
+
 .header-bar {
   height: 600px;
   padding-left: 80px;
@@ -79,11 +96,19 @@ select {
   color: white; }
 
 .nav-bar {
-  margin: 0 auto; }
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 40px; }
+  .nav-bar__logo {
+    flex-basis: 30%;
+    margin-bottom: 10px; }
 
 .nav__list {
   display: flex;
   justify-content: space-around;
+  flex-basis: 70%;
+  align-items: center;
   height: 80px;
   align-items: center; }
 
@@ -98,6 +123,12 @@ select {
     font-size: 28px; }
   .info__text {
     margin-top: 40px; }
+
+@media (min-width: 960px) {
+  .menu-icon--open {
+    display: none; }
+  .menu-icon--close {
+    display: none; } }
 
 @media (max-width: 960px) {
   .header-bar {
@@ -115,39 +146,75 @@ select {
     width: 100%; }
   .nav__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-direction: column;
-    width: 100%;
+    position: fixed;
+    width: 300px;
+    right: 0;
+    top: 0;
+    flex-basis: 100%;
+    background-color: white;
     height: 100%;
-    flex-basis: 100%; }
+    box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1); }
     .nav__list li {
       width: 100%; }
   .list-item {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 60px;
-    flex-basis: 100%;
+    padding: 30px;
+    flex-basis: 10%;
     text-decoration: none;
-    color: white;
-    font-size: 1.8rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    background-color: #df8f79;
-    border-top: 1px solid #c07c69;
-    border-bottom: 1px solid #000001; } }
-
-.nav__button {
-  position: absolute;
-  border: 2px solid red;
-  background-color: red;
-  height: 30px;
-  width: 30px;
-  top: 0;
-  left: 100%; }
+    color: black;
+    font-size: 1.4rem;
+    font-weight: 300;
+    background-color: white; } }
 
 .svg__test {
   fill: white; }
+
+.list-item--close {
+  display: inline-block; }
+
+.nav-bar--close {
+  float: right;
+  margin-right: 20px;
+  height: 40px;
+  width: 40px; }
+
+.list-item--close {
+  position: relative; }
+
+.menu-icon--close {
+  position: absolute;
+  top: 80%;
+  left: 70%;
+  width: 30px;
+  height: 34px; }
+
+.menu-icon--close:before,
+.menu-icon--close:after {
+  content: "";
+  position: absolute;
+  top: 40%;
+  left: 0%;
+  width: 26px;
+  height: 2px;
+  background: black; }
+
+.menu-icon--close:before {
+  webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.menu-icon--close:after {
+  webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+.menu-open {
+  display: block; }
+
+.menu-close {
+  display: none; }
 
 .about-us {
   padding: 40px;
