--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,22 +1,3 @@
-.menu-icon--open {
-  display: inline-block;
-  width: 40px;
-  height: 30px;
-  border-top: 3px solid blue;
-  border-bottom: 3px solid blue;
-  position: relative;
-  
-}
-.menu-icon--open::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  width: 40px;
-  height: 3px;
-  top: 45%;
-  // border-bottom: 2px solid blue;
-  background-color: blue;
-}
 
 .header-bar {
   height: 600px;
@@ -27,7 +8,7 @@
     rgba(0,0,0,0.5)),
     url('../images/physiotherapy-567021_1920.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-attachment: fixed;
 
   color: white;
@@ -38,20 +19,31 @@
 .nav-bar {
   display: flex;
   align-items:center;
-  justify-content: space-around;
+  justify-content: space-between;
   
   padding-top: 40px;
   
   
+  
   &__logo {
-    flex-basis: 30%;
     margin-bottom: 10px;
+    width: 100%;
+    height: 40px;
+
+    fill: white;
+    &:hover {
+      fill: $main_color;
+      transition: 0.3s;
+    }
   }
+}
+.nav-bar__logo__wrapper {
 }
 .nav__list {
   display: flex;
   justify-content: space-around;
-  flex-basis: 70%;
+  
+  flex-grow: 1;
   align-items:center;
 
   height: 80px;
@@ -61,18 +53,29 @@
   text-decoration: none;
   color: white;
 }
+.list-item:hover,
+.list-item:focus{
+  color: $main_color;
+  transition: 0.3s;
+  
+}
+.list-item:active {
+  opacity: 0.3;
+  transition: 0.3s;
 
+}
 .info {
-  // width: 960px;
-  margin: 0 auto;
-  margin-top: 120px;
-  &__wrapper {
-    // width: 640px;
-  }
+  
+  // margin: 0 auto;
+  // margin-top: 120px;
+  width: 700px;
+  padding-top: 40px;
+  
   &__title {
-    font-size: 28px;
+    font-size: 2rem;
   }
   &__text {
+    font-size: 1.4rem;
     margin-top: 40px;
   }
 }
@@ -83,6 +86,13 @@
   .menu-icon--close {
     display: none;
   }
+  .nav__list {
+    display: flex!important;
+  }
+  .list-item--close {
+    display: none;
+  }
+  
 }
 @media(max-width: 960px) {
   .header-bar {
@@ -101,15 +111,99 @@
   }
   
   .nav-bar {
+    display: flex;
+    justify-content: space-between;
+
     position: relative;
+
     margin: 0 auto;
-    
     width: 100%;
+    padding: 40px;
     
+
+    
+
+    &__logo {
+      margin-bottom: 10px;
+      width: 100%;
+      height: 40px;
+      
+      fill: white;
+    }
   }
+  .menu-icon--open {
+    display: inline-block;
+    width: 2.5rem;
+    height: 2rem;
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
+  
+    position: relative; 
+  }
+  
+  .menu-icon--open::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 40px;
+    height: 3px;
+    
+    top: 45%;
+    // border-bottom: 2px solid blue;
+    background-color: white;
+  }
+  
+  .menu-icon--open:hover,
+  .menu-icon--open:focus {
+    border-top: 3px solid $main_color;
+    border-bottom: 3px solid $main_color;
+    transition: 0.3s;
+  }
+  .menu-icon--open:hover::after,
+  .menu-icon--open:focus::after {
+    background-color: $main_color;
+    transition: 0.3s;
+  }
+  
+  .menu-icon--open:active {
+    opacity: 0.3;
+    transition: 0.3s;
+  }
+
+  .menu-icon--close {
+  
+    position: absolute;
+    top: 80%;
+    left: 70%;
+
+    width: 30px;
+    height: 34px;
+}
+.menu-icon--close:before,
+.menu-icon--close:after {
+    content: "";
+    position: absolute;
+    top: 40%;
+    left: 0%;
+    
+    width: 2rem;
+    height: 0.1rem;
+    background: black;
+}
+
+.menu-icon--close:before {
+    webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.menu-icon--close:after {
+    webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
   .nav__list {
     
     display: flex;
+    
     
     justify-content: flex-start;
     flex-direction: column;
@@ -125,6 +219,8 @@
     height: 100%;
 
     box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
+
+    z-index: 1;
     
     li {
       width: 100%;
@@ -148,11 +244,18 @@
     
     background-color: white;
   }
+  .list-item--close {
+    position: relative;
+  }
+  
+
+  .info {
+    width: 100%;
+    padding: 40px;
+
+  }
 }
 
-.svg__test {
-  fill: white;
-}
 .list-item--close {
   display: inline-block;
 // width: 100%;
@@ -167,41 +270,11 @@
   height: 40px;
   width: 40px;
 }
-.list-item--close {
-  position: relative;
-}
-.menu-icon--close {
-  
-    position: absolute;
-    top: 80%;
-    left: 70%;
-    width: 30px;
-    height: 34px;
-}
-.menu-icon--close:before,
-.menu-icon--close:after {
-    content: "";
-    position: absolute;
-    top: 40%;
-    left: 0%;
-    width: 26px;
-    height: 2px;
-    background: black;
-}
 
-.menu-icon--close:before {
-    webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.menu-icon--close:after {
-    webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
 .menu-open{
   display: block;
+ 
 }
 .menu-close {
-  display: none;
-  
+  display: none; 
 }
