--- a/scss/scaffolding.scss
+++ b/scss/scaffolding.scss
@@ -1,4 +1,5 @@
 $main_color: #ffa188;
+// rgba(255, 161, 136, 1);
 $second_color: #fcede8;
 // *:not(path):not(g) {
 //     color:                    hsla(210, 100%, 100%, 0.9) !important;
