--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,176 @@ select {
 .menu-close {
   display: none; }
 
+.button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  border: 0;
+  background: transparent;
+  padding: 0;
+  font-size: 1.4rem; }
+  .button.services__button {
+    width: 14rem;
+    height: auto; }
+    .button.services__button .circle {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: #ffa188;
+      border-radius: 1.625rem; }
+      .button.services__button .circle .icon {
+        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background: white; }
+        .button.services__button .circle .icon.arrow {
+          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+          left: 0.625rem;
+          width: 1.125rem;
+          height: 0.125rem;
+          background: none; }
+          .button.services__button .circle .icon.arrow::before {
+            position: absolute;
+            content: '';
+            top: -0.25rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #fff;
+            border-right: 0.125rem solid #fff;
+            transform: rotate(45deg); }
+    .button.services__button .button-text {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 2rem;
+      color: #ffa188;
+      font-weight: 700; }
+  .button:hover .circle {
+    width: 100%; }
+    .button:hover .circle .icon.arrow {
+      background: white;
+      transform: translate(1rem, 0); }
+  .button:hover .button-text {
+    color: white; }
+
+.button__wrapper--all {
+  display: flex;
+  justify-content: center; }
+
+.button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  border: 0;
+  background: transparent;
+  padding: 0; }
+  .button.services__button--all {
+    width: 34rem;
+    height: auto;
+    margin-top: 40px; }
+    .button.services__button--all .circle {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 4rem;
+      height: 4rem;
+      background: #ffa188;
+      border-radius: 2.625rem; }
+      .button.services__button--all .circle .icon {
+        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background: #fff; }
+        .button.services__button--all .circle .icon.arrow {
+          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+          left: 1rem;
+          width: 1.125rem;
+          height: 0.125rem;
+          background: none; }
+          .button.services__button--all .circle .icon.arrow::before {
+            position: absolute;
+            content: '';
+            top: -0.25rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #fff;
+            border-right: 0.125rem solid #fff;
+            transform: rotate(45deg); }
+    .button.services__button--all .button-text {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #ffa188;
+      font-size: 1.6rem;
+      font-weight: 700;
+      text-transform: uppercase; }
+  .button:hover .circle {
+    width: 100%; }
+    .button:hover .circle .icon.arrow {
+      background: #fff;
+      transform: translate(1rem, 0); }
+  .button:hover .button-text {
+    color: #fff; }
+
+.footer-bar {
+  height: 400px;
+  padding: 8rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wellness-589774_1920.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: white; }
+
+.footer__title {
+  text-align: center; }
+
+.footer__nav-bar {
+  margin: 0 auto; }
+
+.footer__nav__list {
+  display: flex;
+  justify-content: center;
+  height: 80px;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 1.4rem; }
+
+.footer__list-item {
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
+  opacity: 0.5; }
+
+.footer__list-item:hover,
+.footer__list-item:focus {
+  opacity: 1;
+  transition: 0.3s; }
+
+.footer__list-item:active {
+  color: #ffa188; }
+
 .about-us {
   padding: 40px;
   margin: 0 auto;
@@ -290,6 +460,73 @@ select {
   .about__me__img__wrapper {
     flex-basis: 100%;
     height: 100%; } }
+
+.services {
+  padding-bottom: 40px;
+  margin: 0 auto;
+  background-color: #fcede8; }
+
+.item1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_1.jpg");
+  background-size: cover; }
+
+.item2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_2.jpg");
+  background-size: cover; }
+
+.item3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_3.jpg");
+  background-size: cover; }
+
+.item4 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_4.jpg");
+  background-size: cover; }
+
+.services__content {
+  display: flex;
+  flex-wrap: wrap; }
+
+.services__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  color: white;
+  height: 300px;
+  padding: 50px;
+  transition: 0.9s; }
+
+.services__title {
+  font-size: 2rem;
+  margin-bottom: 20px; }
+
+.services__text {
+  margin-bottom: 20px;
+  font-size: 1.2rem; }
+
+@media (max-width: 960px) {
+  .services__content {
+    display: flex;
+    flex-direction: column; } }
+
+@media (min-width: 960px) {
+  .services__wrapper:hover {
+    flex-grow: 3;
+    transition: 0.9s; }
+    .services__wrapper:hover .services__text {
+      opacity: 1;
+      transition: 0.9s; }
+  .services__text {
+    width: 30rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    transition: 0.9s; } }
+
+@media (max-width: 640px) {
+  .services__text {
+    width: 100%;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    transition: 0.9s; } }
 
 .reviews {
   margin-top: 80px;
@@ -507,6 +744,10 @@ select {
   border-radius: 3px;
   padding: .75rem 2.5rem .75rem 1rem; }
 
+.contact__form__input:hover,
+.contact__form__input:focus {
+  border: 1px solid black; }
+
 .contact__form__select {
   position: relative;
   flex-basis: 100%; }
@@ -533,6 +774,11 @@ select {
   /* наследует от родителя */
   color: #444; }
 
+.contact__form__select select:hover,
+.contact__form__select select:hover {
+  border: 1px solid black;
+  /* рамка */ }
+
 .contact__form__select:after {
   content: "";
   display: block;
@@ -554,7 +800,11 @@ select {
   border-radius: 3px;
   padding: .75rem 2.5rem .75rem 1rem;
   resize: none;
-  color: rgba(1, 1, 1, 0.3); }
+  color: black; }
+
+.contact__form__text:hover,
+.contact__form__text:focus {
+  border: 1px solid black; }
 
 .contact__form__button {
   margin-top: 80px;
@@ -564,7 +814,17 @@ select {
   font-size: 1.6rem;
   color: white;
   border-radius: 30px;
-  border: none; }
+  border: none;
+  transition: 0.3s; }
+
+.contact__form__button:hover,
+.contact__form__button:focus {
+  opacity: 0.6;
+  transition: 0.3s; }
+
+.contact__form__button:active {
+  opacity: 0.3;
+  transition: 0.3s; }
 
 .contact__info {
   flex-basis: 30%;
@@ -601,229 +861,3 @@ select {
   .contact__form__input-wrapper {
     width: 100%;
     margin-bottom: 20px; } }
-
-.services {
-  padding-bottom: 40px;
-  margin: 0 auto;
-  background-color: #fcede8; }
-
-.item1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_1.jpg");
-  background-size: cover; }
-
-.item2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_2.jpg");
-  background-size: cover; }
-
-.item3 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_3.jpg");
-  background-size: cover; }
-
-.item4 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/img_4.jpg");
-  background-size: cover; }
-
-.services__content {
-  display: flex;
-  flex-wrap: wrap; }
-
-.services__wrapper {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  color: white;
-  height: 300px;
-  padding: 50px;
-  transition: 0.9s; }
-
-.services__title {
-  font-size: 2rem;
-  margin-bottom: 20px; }
-
-.services__text {
-  margin-bottom: 20px;
-  font-size: 1.2rem; }
-
-.button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  border: 0;
-  background: transparent;
-  padding: 0; }
-  .button.services__button {
-    width: 14rem;
-    height: auto; }
-    .button.services__button .circle {
-      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-      position: relative;
-      display: block;
-      margin: 0;
-      width: 3rem;
-      height: 3rem;
-      background: #ffa188;
-      border-radius: 1.625rem; }
-      .button.services__button .circle .icon {
-        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        background: white; }
-        .button.services__button .circle .icon.arrow {
-          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-          left: 0.625rem;
-          width: 1.125rem;
-          height: 0.125rem;
-          background: none; }
-          .button.services__button .circle .icon.arrow::before {
-            position: absolute;
-            content: '';
-            top: -0.25rem;
-            right: 0.0625rem;
-            width: 0.625rem;
-            height: 0.625rem;
-            border-top: 0.125rem solid #fff;
-            border-right: 0.125rem solid #fff;
-            transform: rotate(45deg); }
-    .button.services__button .button-text {
-      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-left: 2rem;
-      color: #ffa188;
-      font-weight: 700; }
-  .button:hover .circle {
-    width: 100%; }
-    .button:hover .circle .icon.arrow {
-      background: white;
-      transform: translate(1rem, 0); }
-  .button:hover .button-text {
-    color: white; }
-
-@media (max-width: 960px) {
-  .services__content {
-    display: flex;
-    flex-direction: column; } }
-
-@media (min-width: 960px) {
-  .services__wrapper:hover {
-    flex-grow: 3;
-    transition: 0.9s; }
-    .services__wrapper:hover .services__text {
-      opacity: 1;
-      transition: 0.9s; }
-  .services__text {
-    width: 30rem;
-    margin-bottom: 2rem;
-    font-size: 1.2rem;
-    transition: 0.9s; } }
-
-@media (max-width: 640px) {
-  .services__text {
-    width: 100%;
-    margin-bottom: 2rem;
-    font-size: 1.2rem;
-    transition: 0.9s; } }
-
-.button__wrapper--all {
-  display: flex;
-  justify-content: center; }
-
-.button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  border: 0;
-  background: transparent;
-  padding: 0; }
-  .button.services__button--all {
-    width: 34rem;
-    height: auto;
-    margin-top: 2rem; }
-    .button.services__button--all .circle {
-      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-      position: relative;
-      display: block;
-      margin: 0;
-      width: 4rem;
-      height: 4rem;
-      background: #ffa188;
-      border-radius: 2.625rem; }
-      .button.services__button--all .circle .icon {
-        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        background: #fff; }
-        .button.services__button--all .circle .icon.arrow {
-          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-          left: 1rem;
-          width: 1.125rem;
-          height: 0.125rem;
-          background: none; }
-          .button.services__button--all .circle .icon.arrow::before {
-            position: absolute;
-            content: '';
-            top: -0.25rem;
-            right: 0.0625rem;
-            width: 0.625rem;
-            height: 0.625rem;
-            border-top: 0.125rem solid #fff;
-            border-right: 0.125rem solid #fff;
-            transform: rotate(45deg); }
-    .button.services__button--all .button-text {
-      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #ffa188;
-      font-size: 1.6rem;
-      font-weight: 700;
-      text-transform: uppercase; }
-  .button:hover .circle {
-    width: 100%; }
-    .button:hover .circle .icon.arrow {
-      background: #fff;
-      transform: translate(1rem, 0); }
-  .button:hover .button-text {
-    color: #fff; }
-
-.footer-bar {
-  height: 400px;
-  padding: 8rem;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wellness-589774_1920.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  color: white; }
-
-.footer__title {
-  text-align: center; }
-
-.footer__nav-bar {
-  margin: 0 auto; }
-
-.footer__nav__list {
-  display: flex;
-  justify-content: center;
-  height: 80px;
-  align-items: center;
-  flex-wrap: wrap; }
-
-.footer__list-item {
-  padding: 1rem;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.5); }
