--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -28,9 +28,21 @@
     height: 80px;
     align-items: center;
     flex-wrap: wrap;
+
+    font-size: 1.4rem;
   }
   .footer__list-item {
       padding: 1rem;
     text-decoration: none;
-    color: rgba(255,255, 255,0.5)
+    
+    color: white;
+    opacity: 0.5;
+  }
+  .footer__list-item:hover,
+  .footer__list-item:focus {
+    opacity: 1;
+    transition: 0.3s;
+  }
+  .footer__list-item:active {
+    color: $main_color;
   }
